--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,13 @@
 name: CI
 on: [push]
 jobs:
-  
+  uni-test:
+    name: uni test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print a greeting
+      uses: actions/checkout@v2
+      -name: install deps
+      run: npm install
+      -name: build
+      run: npm run test
