--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "docs": "ts-node-esm scripts/generatorNavigator.ts"
+    "docs": "ts-node-esm scripts/generatorNavigator.ts",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "heart",
@@ -13,6 +14,7 @@
   "dependencies": {
     "@types/node": "^20.3.2",
     "glob": "^10.3.1",
-    "typescript": "^5.1.5"
+    "typescript": "^5.1.5",
+    "vitest": "^0.32.2"
   }
 }
