--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "prepare": "npx husky install",
     "docs": "ts-node-esm scripts/generatorNavigator.ts",
     "test": "vitest",
     "gen": "ts-node-esm .vitepress/utils/generatorReadme.ts",
@@ -16,15 +17,20 @@
   "keywords": [],
   "author": "heart",
   "license": "MIT",
-  "dependencies": {
-    "@types/node": "^20.4.8",
+  "devDependencies": {
+    "@types/node": "^20.4.9",
     "glob": "^10.3.3",
     "gray-matter": "^4.0.3",
+    "husky": "^8.0.3",
+    "markdownlint": "^0.29.0",
     "prettier": "^2.8.8",
     "typescript": "^5.1.6",
+    "vitepress": "1.0.0-beta.7",
     "vitest": "^0.32.4"
   },
-  "devDependencies": {
-    "vitepress": "1.0.0-beta.7"
+  "lint-staged": {
+    "*.{vue,js,ts,jsx,tsx,json,md}": [
+      "prettier --write"
+    ]
   }
 }
